--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,7 @@
 	</testsuite>
 
 	<logging>
-		<log type="coverage-html" target="build/coverage" title="Vangelis"
+		<log type="coverage-html" target="build/coverage" title="Web Service"
 			charset="UTF-8" yui="true" highlight="true" lowUpperBound="35"
 			highLowerBound="70" />
 		<log type="coverage-clover" target="build/logs/clover.xml" />
