SQLite3 not found Model test

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <phpunit bootstrap="tests/bootstrap.php" colors="false"
-	stopOnFailure="false" testdox="true" verbose="false"
+	stopOnFailure="false" testdox="true" verbose="true"
 	backupStaticAttributes="false" backupGlobals="false">
-
+	
 	<testsuite name="AllTests">
 		<directory>tests/unit</directory>
 		<directory>tests/integration</directory>
