--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <phpunit bootstrap="tests/bootstrap.php" colors="false"
-	stopOnFailure="true" testdox="true" verbose="true"
-	backupStaticAttributes="false" backupGlobals="false">
+	stopOnFailure="false" testdox="true" verbose="true"
+	backupStaticAttributes="false" backupGlobals="false" 
+	processIsolation="false">
 	
 	<testsuite name="AllTests">
 		<directory>tests/unit</directory>
