Add in applications upload media (screenshots)
Delete children row when parent row is deleted (database/ws.sql)

Modify .htaccess - do not rewrite /uploads folder

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -27,8 +27,8 @@ RewriteRule .* http://%{HTTP_HOST}/%1 [R=301,L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !^/uploads
 RewriteCond %{REQUEST_URI} !^/index.php
 RewriteRule (.*) index.php
 
 ###########################################
-
