--- a/config/config.dist.json
+++ b/config/config.dist.json
@@ -20,7 +20,7 @@
 	"app_mail_address":"",
 	"app_timezone":"Romania/Bucharest",
 	"app_description":"",
-	"app_token":"B5BhjfY42veydBPc",
+	"app_token":"",
 	"app_list_limit":"20",
 	"app_feed_limit":"10",
 	"app_feed_email":"author",
